snack getter templates created

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
         <div class="col-12 d-flex justify-content-center">
           <h3 class="p-2">Total Available: </h3>
         </div>
-        <div class="col-12">
-          <ul id="snacks"></ul>
+        <div class="col-12 d-flex flex-flow" id="snacks">
+          <!--   START OF SNACK TEMPLATE
+          <div class="card" style="width: 10rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+            </div>
+          </div>
+       END OF SNACK TEMPLATE-->
         </div>
       </div>
     </div>
